fix: moved marginal symbol to be visible

--- a/frontend/assets/css/text-viewer2.scss
+++ b/frontend/assets/css/text-viewer2.scss
@@ -1101,7 +1101,7 @@ $render-sic: false;
     *[data-tei-place~="margin"]:not(.tei-type-head):not(.tei-type-header):not(.info-box) {
       display: inline-block;
       position: absolute;
-      left: -5em;
+      right:70%;
       width: 5em;
       text-indent: initial;
     }
